[FIX][WED-118] Fix customizations experience mobile text cropping in customizations menu

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-menu-mobile.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-menu-mobile.scss
@@ -13,6 +13,7 @@
 
 .customizations-menu-mobile-list {
   margin-top: 20px;
+  min-height: 155px;
   overflow-x: auto;
   white-space: nowrap;
 }
